Feature Add: Year Separator
A year separator is added, allowing for dates to be structured like
"28th of June in the year 2025"
rather than "28th of June of 2025"
where the "of" is being repeated twice.

--- a/src/locale/en_GB/messages.json
+++ b/src/locale/en_GB/messages.json
@@ -1395,6 +1395,14 @@
     "message": "Force on to a new line and separate from other Header items.",
     "description": "Description for forcing date onto a new line."
   },
+  "menuContentHeaderDateYearSeparatorShow": {
+    "message": "Show year separator",
+    "description": "Checkbox label for showing a year separator in the header date settings."
+  },
+  "menuContentHeaderDateYearSeparatorLabel": {
+    "message": "Year separator",
+    "description": "Label for the year separator textbox in the header date settings."
+  },
   "menuContentHeaderSearchShow": {
     "message": "Show Search",
     "description": "Checkbox for search."
@@ -2194,10 +2202,6 @@
   "bookmarkFormDisplayNameTextPlaceholder": {
     "message": "Example",
     "description": "Placeholder for bookmark tile name."
-  },
-  "bookmarkFormDisplayNameSize": {
-    "message": "Name size",
-    "description": "Range for bookmark tile name size."
   },
   "bookmarkFormAccentByThemeLabel": {
     "message": "Theme Accent",
